# gobblet-gobblers

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md
docs/: README.md  deployment.md  deployment_planning.md  game_logic_testing.md  game_tree_analysis.md  rules.md  state_encoding.md  v1_manual_testing.md  v1_solver_journal.md  v1_solver_planning.md  v2_rewrite_journal.md  v2_rewrite_planning.md  v2_solver_journal.md  v2_solver_planning.md
frontend-api/: README.md
frontend-api/src/: App.css  App.tsx  api.ts
frontend-api/src/components/: Board.css  History.tsx  Reserves.css  Reserves.tsx
v1/: README.md  pyproject.toml
v1/api/: main.py
v1/gobblet/: __init__.py  game.py  moves.py  state.py  types.py
v1/solver/: __init__.py  benchmark.py  checkpoint.py  collect_positions.py  encoding.py  export_test_positions.py  fast_move.py  minimax.py  overnight_solve.py  robust_solve.py  run_solver.py  solve_subtrees.py  unpruned_solve.py
v1/tests/: test_checkpoint.py  test_encoding.py  test_fast_move.py  test_game.py  test_minimax.py
v2/: README.md
v2/frontend-wasm/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
v2/frontend-wasm/api/: debug.ts  health.ts
v2/frontend-wasm/api/lookup/: batch.ts
v2/frontend-wasm/src/: App.css  App.tsx  api.ts  index.css  types.ts
v2/frontend-wasm/src/components/: AboutModal.css  AboutModal.tsx  Board.tsx  Header.css  Header.tsx  History.css  MovesPanel.css  MovesPanel.tsx  Reserves.css  Reserves.tsx
v2/frontend-wasm/wasm-pkg/: gobblet_core_bg.wasm  gobblet_core_bg.wasm.d.ts  package.json
v2/gobblet-api/: Cargo.toml
v2/gobblet-api/src/: main.rs
v2/gobblet-core/: Cargo.toml
v2/gobblet-core/pkg/: gobblet_core.d.ts  gobblet_core.js
v2/gobblet-core/src/: lib.rs  wasm.rs
v2/gobblet-core/tests/: parity.rs
v2/gobblet-solver/: Cargo.toml
v2/gobblet-solver/src/: checkpoint.rs  lib.rs  main.rs  movegen.rs  solver.rs  stats.rs
