[package]
name = "gobblet-api"
version = "0.1.0"
edition = "2021"
description = "Web API for Gobblet Gobblers game"
license = "MIT"

[dependencies]
gobblet-core = { path = "../gobblet-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
